--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -24,12 +24,12 @@ jobs:
     - name: Install Dependencies
       run: |
                 sudo apt-get update && sudo apt-get -y install python3.8 curl git
-                sudo ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && sudo apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata
-                sudo apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && sudo apt-get -y update
+                sudo ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && sudo apt-get install -y tzdata && sudo dpkg-reconfigure --frontend noninteractive tzdata
+                sudo apt-get -y install software-properties-common && sudo add-apt-repository ppa:deadsnakes/ppa && sudo apt-get -y update
                 python3.8 -m pip install --upgrade pip
                 python3.8 --version
                 uname -m
-                sudo apt-get -y install make
+                sudo apt-get -y install makesudo 
                 sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
                 sudo apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev
                 sudo apt-get install libglib2.0-dev -y
