--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -44,6 +44,7 @@ jobs:
                 curl -fsS https://dlang.org/install.sh | bash -s dmd
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta
                 source $HOME/.cargo/env
+                pip3 install jsonschema
                 python3.8 setup.py install
                 python3.8 -m pip install meson
                 python3.8 -m pip install pytest ninja
