--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -95,7 +95,7 @@ jobs:
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
                 export MESON_UNIT_TEST_BACKEND=ninja && \
-                ./run_tests.py && \
+                ./run_unittests.py && \
                 deactivate'
         
                
